add section headings and formatting

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -1,9 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "03c27f32",
+   "metadata": {},
+   "source": [
+    "# **Machine Learning and Statistics Tasks - Winter 2023**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b078bbde",
+   "metadata": {},
+   "source": [
+    "## *Task 1 - Newton's Method for estimating the square root of a number*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7506fc46",
+   "id": "011218ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +42,54 @@
     "print(\"The square root of\", varN,\" is approximately\", varRoot)  #when the difference between the current guess, varX and the approximated root, varRoot is less than the tolerance\n",
     "                                                                #a string is printed giving the approximation of the root of varN"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d90425d6",
+   "metadata": {},
+   "source": [
+    "## *Task 2*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2343836b",
+   "metadata": {},
+   "source": [
+    "## *Task 3*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b291ec9d",
+   "metadata": {},
+   "source": [
+    "## *Task 4*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec542188",
+   "metadata": {},
+   "source": [
+    "## *Task 5*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "197f7060",
+   "metadata": {},
+   "source": [
+    "## References"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b9f2bde",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
