add markdown cell explaining Newton's method

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -17,6 +17,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b8d3e4bc",
+   "metadata": {},
+   "source": [
+    "Newton's method for estimating the square root of a real number is a specific instance of a more general method of called Newton-Raphson's method for estimating the root of real function. It approximates the function at a given point using the tangent to the function at that point. If a function is real, continuous and differentiable the Newton-Raphson method can be applied. \n",
+    "\n",
+    "The specific case used here is the function $f(x) = x^{2} - a$. By finding the root of this equation, we determine\n",
+    "\n",
+    "\\begin{align}\n",
+    "x^{2} - a &= 0 \\\\\n",
+    "x^{2} &= a \\\\\n",
+    "x &= \\sqrt{a}\n",
+    "\\end{align}\n",
+    "\n",
+    "that is, the square root of $a$.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "011218ae",
@@ -30,7 +49,7 @@
     "varTol = float(input(\"Enter tolerance: \"))  #this creates a variable that will hold the tolerance, one of the inputs needed for the Newton method\n",
     "varX = varN                                 #this creates a variable will be used to hold the guess of the root for each iteration\n",
     "\n",
-    "def newton(N, X):                           #defines a function that takes two arguments, N and X, and returns the value of the calculation for the Newton method\n",
+    "def sqrt(N, X):                           #defines a function that takes two arguments, N and X, and returns the value of the calculation for the Newton method\n",
     "    return 0.5 * (X +(N/X))\n",
     "\n",
     "varRoot = newton(varN, varX)                #creates a variable the holds the result of newton function using varN and varX as arguments\n",
@@ -41,6 +60,14 @@
     "\n",
     "print(\"The square root of\", varN,\" is approximately\", varRoot)  #when the difference between the current guess, varX and the approximated root, varRoot is less than the tolerance\n",
     "                                                                #a string is printed giving the approximation of the root of varN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9094f334",
+   "metadata": {},
+   "source": [
+    "## References"
    ]
   },
   {
