add references to Task 1

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8d3e4bc",
+   "id": "44af0610",
    "metadata": {},
    "source": [
     "Newton's method for estimating the square root of a real number is a specific instance of a more general method of called Newton-Raphson's method for estimating the root of real function. It approximates the function at a given point using the tangent to the function at that point. If a function is real, continuous and differentiable the Newton-Raphson method can be applied. \n",
@@ -64,10 +64,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9094f334",
+   "id": "373c8ebe",
    "metadata": {},
    "source": [
-    "## References"
+    "## References\n",
+    "\n",
+    "- https://brilliant.org/wiki/newton-raphson-method/\n",
+    "- https://math.mit.edu/~stevenj/18.335/newton-sqrt.pdf\n",
+    "- https://github.com/dreapadoir/pands-problem-sheet/blob/main/squareroot.py"
    ]
   },
   {
