--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44af0610",
+   "id": "91373bef",
    "metadata": {},
    "source": [
     "Newton's method for estimating the square root of a real number is a specific instance of a more general method of called Newton-Raphson's method for estimating the root of real function. It approximates the function at a given point using the tangent to the function at that point. If a function is real, continuous and differentiable the Newton-Raphson method can be applied. \n",
@@ -31,40 +31,47 @@
     "x &= \\sqrt{a}\n",
     "\\end{align}\n",
     "\n",
-    "that is, the square root of $a$.\n",
-    "\n"
+    "that is, the square root of $a$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "011218ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number: 1567\n",
+      "The square root of 1567.0  is approximately 39.585350825778974\n"
+     ]
+    }
+   ],
    "source": [
-    "#program to approximate a square root of any positive real number using Newton's method\n",
-    "#Author: David Higgins\n",
+    "def sqrt(a):\n",
+    "    \n",
+    "    tol = 0.0001\n",
+    "    guess = a\n",
+    "    root = 0.5 * (guess +(a/guess))\n",
+    "    \n",
+    "    while abs(root - guess) > tol:\n",
+    "        guess = root\n",
+    "        root = 0.5 * (guess +(a/guess))\n",
+    "    \n",
+    "    return root\n",
     "\n",
-    "varN = float(input(\"Enter number: \"))       #this creates a variable that will hold the number we are trying to find the square root of. It is explicitly declared as a float\n",
-    "varTol = float(input(\"Enter tolerance: \"))  #this creates a variable that will hold the tolerance, one of the inputs needed for the Newton method\n",
-    "varX = varN                                 #this creates a variable will be used to hold the guess of the root for each iteration\n",
+    "a = float(input(\"Enter number: \"))\n",
     "\n",
-    "def sqrt(N, X):                           #defines a function that takes two arguments, N and X, and returns the value of the calculation for the Newton method\n",
-    "    return 0.5 * (X +(N/X))\n",
-    "\n",
-    "varRoot = newton(varN, varX)                #creates a variable the holds the result of newton function using varN and varX as arguments\n",
-    "\n",
-    "while abs(varRoot - varX) > varTol:         #initiates a while loop with the condition that it runs while difference between the last guess and the current approximation of the root is greater than varTol\n",
-    "    varX = varRoot                          #varRoot becomes the new guess, varX\n",
-    "    varRoot = newton(varN, varX)            #a new varRoot is calculated using newton\n",
-    "\n",
-    "print(\"The square root of\", varN,\" is approximately\", varRoot)  #when the difference between the current guess, varX and the approximated root, varRoot is less than the tolerance\n",
-    "                                                                #a string is printed giving the approximation of the root of varN"
+    "print(\"The square root of\", a,\" is approximately\", sqrt(a))\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "373c8ebe",
+   "id": "d55adb2f",
    "metadata": {},
    "source": [
     "## References\n",
