expand task 1 markdown cell with more detail explaining code below

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -5,7 +5,9 @@
    "id": "03c27f32",
    "metadata": {},
    "source": [
-    "# **Machine Learning and Statistics Tasks - Winter 2023**"
+    "# **Machine Learning and Statistics Tasks - Winter 2023**\n",
+    "\n",
+    "## **David Higgins - G00411302**"
    ]
   },
   {
@@ -18,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91373bef",
+   "id": "02e815dd",
    "metadata": {},
    "source": [
     "Newton's method for estimating the square root of a real number is a specific instance of a more general method of called Newton-Raphson's method for estimating the root of real function. It approximates the function at a given point using the tangent to the function at that point. If a function is real, continuous and differentiable the Newton-Raphson method can be applied. \n",
@@ -31,12 +33,16 @@
     "x &= \\sqrt{a}\n",
     "\\end{align}\n",
     "\n",
-    "that is, the square root of $a$."
+    "that is, the square root of $a$.\n",
+    "\n",
+    "This is achieved using the formula $x_{n+1} = \\frac{1}{2} \\left( x_n + \\frac{a}{x_n} \\right)$, where $x_n$ is the current best approximation of the root (called guess in the code below). $x_{n+1}$ is the improved approximation of the root derived using the formula (called root in the code below). \n",
+    "\n",
+    "The tolerance in the function sqrt(a) is hardcoded in as 0.0001 but can be passed as an argument to the function. The while loop will continue as long as the difference between the previous approximation ($x_{n}$) and the improved approximation ($x_{n+1}$) is greater than the tolerance. As the sequence converges it will reach a point where the difference is less than the tolerance and the while loop terminates. This gives the final approximation of the square root of $a$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "011218ae",
    "metadata": {},
    "outputs": [
@@ -44,13 +50,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter number: 1567\n",
-      "The square root of 1567.0  is approximately 39.585350825778974\n"
+      "Enter number: 6400\n",
+      "The square root of 6400.0  is approximately 80.0\n"
      ]
     }
    ],
    "source": [
-    "def sqrt(a):\n",
+    "def sqrt(a):              #def sqrt(tol, a): could be used as an alternative to pass in a variable tolerance \n",
     "    \n",
     "    tol = 0.0001\n",
     "    guess = a\n",
@@ -71,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d55adb2f",
+   "id": "c1c99166",
    "metadata": {},
    "source": [
     "## References\n",
