add code for task 2

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02e815dd",
+   "id": "51de2875",
    "metadata": {},
    "source": [
     "Newton's method for estimating the square root of a real number is a specific instance of a more general method of called Newton-Raphson's method for estimating the root of real function. It approximates the function at a given point using the tangent to the function at that point. If a function is real, continuous and differentiable the Newton-Raphson method can be applied. \n",
@@ -42,19 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "011218ae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter number: 6400\n",
-      "The square root of 6400.0  is approximately 80.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sqrt(a):              #def sqrt(tol, a): could be used as an alternative to pass in a variable tolerance \n",
     "    \n",
@@ -77,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1c99166",
+   "id": "88b82ca6",
    "metadata": {},
    "source": [
     "## References\n",
@@ -92,7 +83,51 @@
    "id": "d90425d6",
    "metadata": {},
    "source": [
-    "## *Task 2*"
+    "## *Task 2 - Chi-Squared Test* "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e08ea969",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4de58f32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The p-value (0.10447218120907394) is greater than the significance level of 0.05, therefore there is not evidence to support the hypothesis that there is an association between drink preference and biscuit preference\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.stats import chi2_contingency\n",
+    "\n",
+    "#Create contingency table as a numpy array\n",
+    "conTable = np.array([[43, 57], [56, 45]])\n",
+    "\n",
+    "#Set a p-value (significance level) to evaluate results\n",
+    "sigLevel = 0.05\n",
+    "\n",
+    "results = chi2_contingency(con_table)\n",
+    "\n",
+    "#print(results)\n",
+    "\n",
+    "#Compare the p-value found in the results and the significance level\n",
+    "if results.pvalue < sigLevel:\n",
+    "    print(\"The p-value ({}) is less than the significance level of {}, therefore there is evidence to support the hypothesis that there is an association between drink preference and biscuit preference\".format(results.pvalue, sigLevel))\n",
+    "\n",
+    "else:\n",
+    "    print(\"The p-value ({}) is greater than the significance level of {}, therefore there is not evidence to support the hypothesis that there is an association between drink preference and biscuit preference\".format(results.pvalue, sigLevel))"
    ]
   },
   {
