add intro paragraph for chi-square test

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -71,7 +71,7 @@
    "id": "88b82ca6",
    "metadata": {},
    "source": [
-    "## References\n",
+    "### References\n",
     "\n",
     "- https://brilliant.org/wiki/newton-raphson-method/\n",
     "- https://math.mit.edu/~stevenj/18.335/newton-sqrt.pdf\n",
@@ -87,17 +87,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e08ea969",
+   "cell_type": "markdown",
+   "id": "14f44027",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The chi-square test is a statistical test used to determine if there is a significant association between two variables. It compares the observed frequencies seen in the data with the expected frequencies that would be expected to be seen in the data if the two variables were independent of each other. \n",
+    "\n",
+    "The formula for the Chi-Squared test statistic is given by\n",
+    "$$\n",
+    "\\chi^2 = \\sum \\frac{(O_{i} - E_{i})^2}{E_{i}}\n",
+    "$$\n",
+    "\n",
+    "where $O_{i}$ is the observed data and $E_{i}$ is the expected data. For truly independent variables, the difference between the observed data and the expected data will be small. This will generate a small Chi-Squared test statistic. If there is a link between the variables, the test statistic will be large as the observed data will deviate significantly from the expected data.\n",
+    "\n",
+    "The p-value defines the the probability of observing the results (or something more extreme) if the two variables were actually independent. A small p-value suggests that the variables are not independent. A significance level is defined as part of the test, usually 0.05, and if the p-value is less than the significance level, then this indicates that there is a significant association between the two variables."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4de58f32",
+   "id": "afca175a",
    "metadata": {},
    "outputs": [
     {
@@ -124,10 +133,22 @@
     "\n",
     "#Compare the p-value found in the results and the significance level\n",
     "if results.pvalue < sigLevel:\n",
-    "    print(\"The p-value ({}) is less than the significance level of {}, therefore there is evidence to support the hypothesis that there is an association between drink preference and biscuit preference\".format(results.pvalue, sigLevel))\n",
+    "    print(\"The p-value ({}) is less than the significance level of {}, therefore there is evidence to support the hypothesis that there is an association between drink preference and biscuit preference.\".format(results.pvalue, sigLevel))\n",
     "\n",
     "else:\n",
-    "    print(\"The p-value ({}) is greater than the significance level of {}, therefore there is not evidence to support the hypothesis that there is an association between drink preference and biscuit preference\".format(results.pvalue, sigLevel))"
+    "    print(\"The p-value ({}) is greater than the significance level of {}, therefore there is not evidence to support the hypothesis that there is an association between drink preference and biscuit preference.\".format(results.pvalue, sigLevel))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2a7bbd9",
+   "metadata": {},
+   "source": [
+    "### References\n",
+    "\n",
+    "- https://en.wikipedia.org/wiki/Chi-squared_test\n",
+    "- https://www.simplilearn.com/tutorials/statistics-tutorial/chi-square-test\n",
+    "- https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.chi2_contingency.html\n"
    ]
   },
   {
