correct variable naming error in code

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -42,10 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "011218ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number: 1600\n",
+      "The square root of 1600.0  is approximately 40.0\n"
+     ]
+    }
+   ],
    "source": [
     "def sqrt(a):              #def sqrt(tol, a): could be used as an alternative to pass in a variable tolerance \n",
     "    \n",
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14f44027",
+   "id": "11cfdd89",
    "metadata": {},
    "source": [
     "The chi-square test is a statistical test used to determine if there is a significant association between two variables. It compares the observed frequencies seen in the data with the expected frequencies that would be expected to be seen in the data if the two variables were independent of each other. \n",
@@ -105,15 +114,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "afca175a",
+   "execution_count": 2,
+   "id": "94afef34",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The p-value (0.10447218120907394) is greater than the significance level of 0.05, therefore there is not evidence to support the hypothesis that there is an association between drink preference and biscuit preference\n"
+      "The p-value (0.10447218120907394) is greater than the significance level of 0.05, therefore there is not evidence to support the hypothesis that there is an association between drink preference and biscuit preference.\n"
      ]
     }
    ],
@@ -127,7 +136,7 @@
     "#Set a p-value (significance level) to evaluate results\n",
     "sigLevel = 0.05\n",
     "\n",
-    "results = chi2_contingency(con_table)\n",
+    "results = chi2_contingency(conTable)\n",
     "\n",
     "#print(results)\n",
     "\n",
@@ -141,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2a7bbd9",
+   "id": "68b57763",
    "metadata": {},
    "source": [
     "### References\n",
