add code for task 3 and penguin csv file

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -50,8 +50,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter number: 1600\n",
-      "The square root of 1600.0  is approximately 40.0\n"
+      "Enter number: 99\n",
+      "The square root of 99.0  is approximately 9.949874371188393\n"
      ]
     }
    ],
@@ -166,6 +166,89 @@
    "metadata": {},
    "source": [
     "## *Task 3*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "291cd422",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    species  island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+      "220  Gentoo  Biscoe            46.1           13.2              211.0   \n",
+      "221  Gentoo  Biscoe            50.0           16.3              230.0   \n",
+      "222  Gentoo  Biscoe            48.7           14.1              210.0   \n",
+      "223  Gentoo  Biscoe            50.0           15.2              218.0   \n",
+      "224  Gentoo  Biscoe            47.6           14.5              215.0   \n",
+      "..      ...     ...             ...            ...                ...   \n",
+      "339  Gentoo  Biscoe             NaN            NaN                NaN   \n",
+      "340  Gentoo  Biscoe            46.8           14.3              215.0   \n",
+      "341  Gentoo  Biscoe            50.4           15.7              222.0   \n",
+      "342  Gentoo  Biscoe            45.2           14.8              212.0   \n",
+      "343  Gentoo  Biscoe            49.9           16.1              213.0   \n",
+      "\n",
+      "     body_mass_g     sex  \n",
+      "220       4500.0  FEMALE  \n",
+      "221       5700.0    MALE  \n",
+      "222       4450.0  FEMALE  \n",
+      "223       5700.0    MALE  \n",
+      "224       5400.0    MALE  \n",
+      "..           ...     ...  \n",
+      "339          NaN     NaN  \n",
+      "340       4850.0  FEMALE  \n",
+      "341       5750.0    MALE  \n",
+      "342       5200.0  FEMALE  \n",
+      "343       5400.0    MALE  \n",
+      "\n",
+      "[124 rows x 7 columns]\n",
+      "Empty DataFrame\n",
+      "Columns: [species, island, bill_length_mm, bill_depth_mm, flipper_length_mm, body_mass_g, sex]\n",
+      "Index: []\n",
+      "Empty DataFrame\n",
+      "Columns: [species, island, bill_length_mm, bill_depth_mm, flipper_length_mm, body_mass_g, sex]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Load the penguins dataset\n",
+    "penguins_data = pd.read_csv(\"penguins.csv\")  # Make sure to specify the correct path to your dataset\n",
+    "\n",
+    "# Filter the data for gentoo penguins\n",
+    "gentoo_penguins = penguins_data[penguins_data[\"species\"] == \"Gentoo\"]\n",
+    "\n",
+    "print(gentoo_penguins)\n",
+    "\n",
+    "# Separate the data for male and female gentoo penguins\n",
+    "male_penguins = gentoo_penguins[gentoo_penguins[\"Sex\"] == \"Male\"]\n",
+    "female_penguins = gentoo_penguins[gentoo_penguins[\"Sex\"] == \"Female\"]\n",
+    "\n",
+    "#Remove missing values for body mass\n",
+    "#male_penguins = male_penguins.dropna(subset=[\"body_mass_g\"])\n",
+    "#female_penguins = female_penguins.dropna(subset=[\"body_mass_g\"])\n",
+    "\n",
+    "print(male_penguins)\n",
+    "print(female_penguins)\n",
+    "# Perform a t-test\n",
+    "#t_statistic, p_value = stats.ttest_ind(male_penguins[\"body_mass_g\"], female_penguins[\"body_mass_g\"])\n",
+    "\n",
+    "# Output the results\n",
+    "#print(\"T-Statistic:\", t_statistic)\n",
+    "#(\"P-Value:\", p_value)\n",
+    "\n",
+    "# Determine significance\n",
+    "#alpha = 0.05  # Set your desired significance level\n",
+    "#if p_value < alpha:\n",
+    "#    print(\"There is evidence of a significant difference in body mass between male and female gentoo penguins.\")\n",
+    "#else:\n",
+    "#    print(\"There is no significant difference in body mass between male and female gentoo penguins.\")"
    ]
   },
   {
