update comments and add code to remove blank values from datasets

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -170,8 +170,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "dd1a628b",
+   "execution_count": 15,
+   "id": "a72b87c0",
    "metadata": {},
    "outputs": [
     {
@@ -188,29 +188,28 @@
     "import pandas as pd\n",
     "from scipy import stats\n",
     "\n",
-    "# Load the penguins dataset\n",
     "penguins_data = pd.read_csv(\"penguins.csv\")  # Make sure to specify the correct path to your dataset\n",
     "\n",
-    "# Filter the data for gentoo penguins\n",
+    "#Filter the data for gentoo penguins\n",
     "gentoo_penguins = penguins_data[penguins_data[\"species\"] == \"Gentoo\"]\n",
     "\n",
-    "# Separate the data for male and female gentoo penguins\n",
+    "#Separate the data for male and female gentoo penguins\n",
     "male_penguins = gentoo_penguins[gentoo_penguins[\"sex\"] == \"MALE\"]\n",
     "female_penguins = gentoo_penguins[gentoo_penguins[\"sex\"] == \"FEMALE\"]\n",
     "\n",
     "#Remove missing values for body mass\n",
-    "#male_penguins = male_penguins.dropna(subset=[\"body_mass_g\"])\n",
-    "#female_penguins = female_penguins.dropna(subset=[\"body_mass_g\"])\n",
+    "male_penguins = male_penguins.dropna(subset=[\"body_mass_g\"])\n",
+    "female_penguins = female_penguins.dropna(subset=[\"body_mass_g\"])\n",
     "\n",
-    "# Perform a t-test\n",
+    "#Perform the t-test\n",
     "t_statistic, p_value = stats.ttest_ind(male_penguins[\"body_mass_g\"], female_penguins[\"body_mass_g\"])\n",
     "\n",
-    "# Output the results\n",
+    "\n",
     "print(\"T-Statistic:\", t_statistic)\n",
     "print(\"P-Value:\", p_value)\n",
     "\n",
-    "# Determine significance\n",
-    "alpha = 0.05  # Set your desired significance level\n",
+    "#Determine significance\n",
+    "alpha = 0.05 \n",
     "if p_value < alpha:\n",
     "    print(\"There is evidence of a significant difference in body mass between male and female gentoo penguins.\")\n",
     "else:\n",
