add introductory cell for task 3

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -165,13 +165,39 @@
    "id": "2343836b",
    "metadata": {},
    "source": [
-    "## *Task 3*"
+    "## *Task 3 - Penguin dataset t-test* "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cfcb29d",
+   "metadata": {},
+   "source": [
+    "The penguin dataset used in this example is a popular dataset frequently used in data analysis and statistics. It is derived from a study conducted by Dr. Kristen Gorman and the Palmer Station, Antarctica LTER (Long Term Ecological Research) program.\n",
+    "\n",
+    "The data was collected on an island in the Palmer Archipelago, near the Antarctic Peninsula, and includes information about three species of penguins: Adélie, Chinstrap, and Gentoo. The dataset provides various measurements and characteristics of penguins, including their species, sex, bill length, bill depth, flipper length and body mass.\n",
+    "\n",
+    "It has been widely used in data analysis and statistics courses to teach techniques such as hypothesis testing, regression analysis, and data visualization.\n",
+    "\n",
+    "The t-test is a statistical method used to compare the means of two groups and determine if there is a significant difference between them. In the context of the penguin dataset, the t-test is used to investigate whether there is a significant difference in the body mass of male and female gentoo penguins. Here's a brief explanation of how the t-test works:\n",
+    "\n",
+    "1. Null Hypothesis (H0): The null hypothesis assumes that there is no significant difference between the means of the two groups. In this case, it means that there is no significant difference in body mass between male and female gentoo penguins.\n",
+    "\n",
+    "2. Alternative Hypothesis (Ha): The alternative hypothesis is the opposite of the null hypothesis. It suggests that there is a significant difference between the means of the two groups. In this case, it implies that there is a significant difference in body mass between male and female gentoo penguins.\n",
+    "\n",
+    "3. T-Test Calculation: The t-test calculates a t-statistic, which measures the difference between the means of the two groups relative to the variability within the groups. A higher t-statistic indicates a larger difference.\n",
+    "\n",
+    "4. P-Value: The t-test also calculates a p-value, which represents the probability of observing the observed difference (or more extreme differences) if the null hypothesis were true. A small p-value (typically less than a chosen significance level, e.g., 0.05) suggests strong evidence against the null hypothesis.\n",
+    "\n",
+    "5. Interpretation: If the p-value is less than the chosen significance level (e.g., 0.05), we reject the null hypothesis, indicating that there is evidence of a significant difference between the groups. If the p-value is greater than the significance level, we fail to reject the null hypothesis, suggesting no significant difference.\n",
+    "\n",
+    "In the code below, we calculate the t-statistic and p-value using the `stats.ttest_ind` function from the scipy library and used a significance level (alpha) of 0.05 to make a decision about whether there is a significant difference in body mass between male and female gentoo penguins based on the p-value."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a72b87c0",
+   "id": "311d7521",
    "metadata": {},
    "outputs": [
     {
