add references for task 3

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cfcb29d",
+   "id": "5eddbb2c",
    "metadata": {},
    "source": [
     "The penguin dataset used in this example is a popular dataset frequently used in data analysis and statistics. It is derived from a study conducted by Dr. Kristen Gorman and the Palmer Station, Antarctica LTER (Long Term Ecological Research) program.\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "311d7521",
+   "id": "787acc9f",
    "metadata": {},
    "outputs": [
     {
@@ -240,6 +240,18 @@
     "    print(\"There is evidence of a significant difference in body mass between male and female gentoo penguins.\")\n",
     "else:\n",
     "    print(\"There is no significant difference in body mass between male and female gentoo penguins.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "545273bc",
+   "metadata": {},
+   "source": [
+    "### References\n",
+    "\n",
+    "- https://github.com/mwaskom/seaborn-data/blob/master/penguins.csv (visited on 11/11/2023)\n",
+    "- https://statistics.laerd.com/spss-tutorials/independent-t-test-using-spss-statistics.php (visited on 11/11/2023)\n",
+    "- https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.chi2_contingency.html"
    ]
   },
   {
