add markdown cells explaining how scatterplots differentiate setosas

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -267,9 +267,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "529894cb",
+   "metadata": {},
+   "source": [
+    "The famous Iris dataset, often used in machine learning and statistics, includes measurements of sepal length and width, and petal length and width for three species of Iris flowers: Iris setosa, Iris versicolor, and Iris virginica.\n",
+    "\n",
+    "To assess whether the Iris setosa class is easily separable from the other two classes (versicolor and virginica), we can perform an exploratory data analysis. One common approach is to use scatter plots to visualize the relationships between different pairs of features for each of the three Iris species. By examining these plots, we can determine whether Iris setosa points form a distinct group separate from the other two species."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5f38b6b5",
+   "id": "1fd973e4",
    "metadata": {},
    "outputs": [
     {
@@ -319,6 +329,24 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c540459",
+   "metadata": {},
+   "source": [
+    "The scatter plots of the Iris dataset provide a clear visualization of the separability of the Iris setosa species from the other two species, Iris versicolor and Iris virginica:\n",
+    "\n",
+    "Sepal Length vs. Sepal Width: Iris setosa appears distinctly separable from the other two species. It has a unique cluster with smaller sepal length and larger sepal width.\n",
+    "\n",
+    "Sepal Length vs. Petal Length: Again, Iris setosa shows a clear separation, with shorter sepal lengths and petal lengths compared to the other species.\n",
+    "\n",
+    "Sepal Width vs. Petal Width: In this plot, the setosa species is noticeably separated from the other two, particularly in terms of smaller petal width.\n",
+    "\n",
+    "Petal Length vs. Petal Width: This plot shows the most distinct separation, with Iris setosa having significantly smaller petal lengths and widths than the other two species.\n",
+    "\n",
+    "Based on these visualizations, we can conclude that the Iris setosa species is easily separable from Iris versicolor and Iris virginica in the Iris dataset, particularly when considering petal dimensions."
    ]
   },
   {
