add first draft of introduction paragraph

--- a/project.ipynb
+++ b/project.ipynb
@@ -17,6 +17,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f29644c",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87f878ff",
+   "metadata": {},
+   "source": [
+    "The Fisher Iris dataset, introduced by Sir Ronald A. Fisher in 1936, stands as a seminal contribution to the fields of data science and machine learning. This dataset, featuring 150 iris flower samples, holds a unique place in the annals of statistical and botanical research. Its primary purpose is to explore the feasibility of utilizing quantitative measurements—namely, sepal and petal dimensions—to accurately classify iris flowers into three distinct species: Iris setosa, Iris versicolor, and Iris virginica.\n",
+    "\n",
+    "At its core, the dataset is elegantly simple. Each iris sample is characterized by four essential features: sepal length, sepal width, petal length, and petal width—each meticulously recorded in centimeters. These features serve as the foundation for supervised learning endeavors, where the challenge lies in building classification models that can discern the subtle botanical differences among iris species.\n",
+    "\n",
+    "Beyond its historical significance, the Fisher Iris dataset continues to play a vital role in modern data science. It serves as a benchmark for evaluating classification algorithms, a canvas for data visualization and exploration, and a platform for teaching fundamental concepts in machine learning. In this project, we embark on a journey to unlock the dataset's insights and showcase its enduring relevance in the ever-evolving landscape of data analysis and predictive modeling."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "97b5d0b2",
@@ -71,12 +91,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76e5a6cd",
+   "cell_type": "markdown",
+   "id": "9fde0c42",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Supervised Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a697fef0",
+   "metadata": {},
+   "source": [
+    "## Classification Algorithms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55ad3daa",
+   "metadata": {},
+   "source": [
+    "## K Nearest Neighbours"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4ad5ef4",
+   "metadata": {},
+   "source": [
+    "## Support Vector Machines"
+   ]
   }
  ],
  "metadata": {
